--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   firebase_core: ^1.20.0
   firebase_auth: ^3.4.2
   cloud_firestore: ^3.4.2
-  modal_progress_hud: ^0.1.3
+  # modal_progress_hud: ^0.1.3
   animated_text_kit: ^4.2.1
 
 dev_dependencies:
